--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ console.log('App is initialized');">
     <!-- #9 #shdw #elv: app bar goes 4dp high -->
     <!-- #10 #new: assign an id to the h1 element to be able to address it -->
     <h1 id="app-bar-messages" class="shadow--4dp">
-        <span id="channel-name">#SevenContinents</span>
+        <span id="channel-name">#Art</span>
         <small id="channel-location">by <strong>cheeses.yard.applies</strong></small>
         <!-- #9 #btns #str: a new primary button now contains the icon -->
         <button id="channel-star" class="primary" onclick="star()">
